@@ -31,6 +31,7 @@ Jump Start Changelog
 * Added option to shade page banner images with transparent color.
 * Added filters for displaying theme menu locations, [see here](http://support.themeblvd.com/forums/topic/creating-separate-main-menu-for-logged-in-user-jump-start-2-0-beta2/#post-20720).
 * Added `video_background` option type.
+* Added support for responsive visibility options for columns and sections in Builder.
 * Added video background support in Layout Builder sections, page banners, and theme base header background options.
 * Improvements to WP `[caption]` shortcode, and auto lightbox integration.
 * Improvements, structural changes, and option changes to header of Executive theme base.
